@@ -26,14 +26,17 @@ http {
 		listen       8082;
 		root /home/leop/sandbox/nginx_push/tests;
 		location /broadcast {
+			push_channel_id $arg_channel;
 			location = /broadcast/sub {
-				set $push_channel_id $arg_channel;
+				#set $push_channel_id $arg_channel;
+				push_channel_id subface;
 				push_subscriber;
 				push_subscriber_concurrency broadcast;
 				push_channel_group broadcast;
 			}
 			location = /broadcast/pub {
-				set $push_channel_id $arg_channel;
+				#set $push_channel_id $arg_channel;
+				push_channel_id pubface;
 				push_publisher;
 				push_min_message_buffer_length 5;
 				push_max_message_buffer_length 20;
